--- a/app/views/golden/director_index.html.erb
+++ b/app/views/golden/director_index.html.erb
@@ -1,4 +1,5 @@
 <h1>List of Directors</h1>
+<a href="http://localhost:3000/directors/new_form">Add a New Director</a>
 <table>
   <% @list_of_directors.each do |director| %>
   <tr>
@@ -10,6 +11,12 @@
     </td>
     <td>
       <a href="http://localhost:3000/directors/<%= director.id %>">Show</a>
+    </td>
+    <td>
+      <a href="http://localhost:3000/directors/<%= director.id %>/edit">Edit</a>
+    </td>
+    <td>
+      <a href="http://localhost:3000/director_delete/<%= director.id %>">Delete</a>
     </td>
   </tr>
   <% end %>
